# ablator-skeleton

./: Dockerfile  README.md  pyproject.toml
ablator_skeleton/: __init__.py  __main__.py
configs/: default.yaml
configs/mp/: mock_param.yaml
