[tool.poetry]
name = "ablator-skeleton"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ablator_skeleton"}]

[tool.poetry.dependencies]
python = "^3.10"
ablator = "0.0.1b2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
